--- a/Projects/Scripts/Scripts.csproj
+++ b/Projects/Scripts/Scripts.csproj
@@ -37,5 +37,6 @@
   <ItemGroup>
     <PackageReference Include="MailKit" Version="2.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Connections.Abstractions" Version="3.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 </Project>
